<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FreeXperia KeyboardChanger by Bin4ry</string>
    <string name="header">Please choose your HW-Keyboard Layout:</string>
    <string name="radio_button_1">AR</string>
    <string name="radio_button_2">ARO</string>
    <string name="radio_button_3">AT</string>
    <string name="radio_button_4">BAL</string>
    <string name="radio_button_5">BE</string>
    <string name="radio_button_6">CE1</string>
    <string name="radio_button_7">CE2</string>
    <string name="radio_button_8">CE3</string>
    <string name="radio_button_9">CH</string>
    <string name="radio_button_10">CHT-TW</string>
    <string name="radio_button_11">CN</string>
    <string name="radio_button_12">CZ</string>
    <string name="radio_button_13">DE</string>
    <string name="radio_button_14">DK</string>
    <string name="radio_button_15">ES</string>
	<string name="radio_button_16">FR</string>
	<string name="radio_button_17">GBA</string>
	<string name="radio_button_18">GR</string>
	<string name="radio_button_19">HK</string>
	<string name="radio_button_20">HR</string>
	<string name="radio_button_21">IBE</string>
	<string name="radio_button_22">IE</string>
	<string name="radio_button_23">IN</string>
	<string name="radio_button_24">IT</string>
	<string name="radio_button_25">MEA</string>
	<string name="radio_button_26">MEL</string>
	<string name="radio_button_27">MY</string>
	<string name="radio_button_28">NG1</string>
	<string name="radio_button_29">NG2</string>
	<string name="radio_button_30">NL</string>
	<string name="radio_button_31">NO</string>
	<string name="radio_button_32">NZ</string>
	<string name="radio_button_33">PH</string>
	<string name="radio_button_34">PL</string>
	<string name="radio_button_35">PT</string>
	<string name="radio_button_36">RO</string>
	<string name="radio_button_37">RU</string>
	<string name="radio_button_38">SA</string>
	<string name="radio_button_39">SE</string>
	<string name="radio_button_40">SG</string>
	<string name="radio_button_41">SI</string>
	<string name="radio_button_42">SK</string>
	<string name="radio_button_43">TH</string>
	<string name="radio_button_44">TR</string>
	<string name="radio_button_45">TW</string>
	<string name="radio_button_46">UA</string>
	<string name="radio_button_47">UK</string>
    <string name="button">Save and Reboot</string>
</resources>
